<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/feature_nav_graph"
    app:startDestination="@id/firstFragment">

    <fragment
        android:id="@+id/firstFragment"
        android:name="uk.co.diegobarle.hiltnavigationtest.ui.feature.FirstFragment">
        <action
            android:id="@+id/action_firstFragment_to_secondFragment"
            app:destination="@id/secondFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/secondFragment"
        android:name="uk.co.diegobarle.hiltnavigationtest.ui.feature.SecondFragment">
        <action
            android:id="@+id/action_secondFragment_to_mainFragment"
            app:destination="@id/initialFragment"
            app:popUpTo="@id/initialFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>